# dwSerializer

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: binary_serializer.hpp  json_serializer.hpp  reflection.h  serializer.hpp  serializer_macros.hpp  type_descriptor.h  xml_serializer.hpp
src/: binary_serializer.cpp  json_serializer.cpp  type_descriptor.cpp
test/: CMakeLists.txt  main.cpp
